src/graph/snapshots/hopr_api__graph__function__tests__return_last_edge_starved_when_connected_but_measured_dead.snap
---
source: src/graph/function.rs
expression: "ValueResult\n{ observations: obs, initial_value: 1.0, path_index: 1, result_value: cost }"
---
observations:
  immediate:
    connected: true
    score: 0
    ack_rate: 0.9
  intermediate: ~
initial_value: 1
path_index: 1
result_value: 0.0000000009000000000000001
