src/graph/snapshots/hopr_api__graph__function__tests__return_value_fn_invariants.snap
---
source: src/graph/function.rs
expression: "Invariants\n{ initial_value: value_fn.initial_value(), min_value: value_fn.min_value(), }"
---
initial_value: 1
min_value: 0
