src/graph/snapshots/hopr_api__graph__function__tests__returning_first_edge_scales_with_the_incoming_value.snap
---
source: src/graph/function.rs
expression: "ValueResult\n{\n    direction, path_length, path_index, observations, initial_value,\n    result_value,\n}"
---
direction: returning
path_length: 2
path_index: 0
observations:
  immediate: ~
  intermediate:
    balance: "1000"
    score: 0.95
initial_value: 2
result_value: 1.9
