src/graph/snapshots/hopr_api__graph__function__tests__returning_first_edge_unobserved.snap
---
source: src/graph/function.rs
expression: "ValueResult\n{\n    direction, path_length, path_index, observations, initial_value,\n    result_value,\n}"
---
direction: returning
path_length: 2
path_index: 0
observations:
  immediate: ~
  intermediate: ~
initial_value: 1
result_value: -1
